# Personal-Website

./: .gitignore  LICENSE  README.md  docker-compose.yml
axum/: Dockerfile
axum/felys/: Cargo.toml
axum/service/: Cargo.toml
back-end/: .gitignore  backend.py  data.json  requirements.txt
back-end/data/: hello.json  links.json  more.json  projects.json
fast/: .dockerignore  Dockerfile  main.py  requirements.txt
fast/chemistry/: __init__.py  base.py  core.py
fast/image/: __init__.py  utils.py
felys/: Cargo.toml  Dockerfile
felys/src/: error.rs  main.rs
felys/src/core/: frontend.rs  mod.rs  runtime.rs
felys/src/environ/: mod.rs  scope.rs  value.rs
felys/src/frontend/: core.rs  expression.rs  lexer.rs  mod.rs  node.rs  scanner.rs  statement.rs  token.rs
felys/src/runtime/: environ.rs  eval.rs  expression.rs  mod.rs  program.rs  statement.rs
front-end/: package-lock.json  package.json
front-end/public/: index.html  manifest.json
front-end/src/: App.css  App.tsx  data.json
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: Experience.tsx  Footer.tsx  Hero.tsx  More.tsx  Navbar.tsx  Project.tsx
frontend/constant/: cn.ts  en.ts  index.ts
frontend/utils/: cookies.ts
image/: generate.py
nextjs/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
nextjs/app/: actions.ts  globals.css  layout.tsx  page.tsx
nextjs/components/: Experience.tsx  Footer.tsx
nginx/: Dockerfile  felysneko.key  felysneko.pem
setup/: galaxyneko.website  neko.sh  root.sh
(+48 files in other folders)
